fix remove button display on mobile

--- a/app/assets/stylesheets/styles/users/show.scss
+++ b/app/assets/stylesheets/styles/users/show.scss
@@ -73,9 +73,9 @@
       align-items: stretch;
 
       .remove {
-        width: 10%;
+        flex: 1;
         display: flex;
-        align-items: center;
+        align-items: stretch;
         justify-content: center;
 
         .remove-button {
@@ -83,7 +83,6 @@
           background: white;
           cursor: pointer;
           width: 100%;
-          height: 100%;
 
           i {
             font-size: 24px;
@@ -101,7 +100,7 @@
       }
 
       .item {
-        width: 90%;
+        flex: 8;
         padding-left: 15px;
         border-radius: 0;
         display: flex;
@@ -149,9 +148,8 @@
     }
   }
 
-
-
   @media #{$mobile} {
+    padding: 0 15px 15px 15px;
 
     .user-dashboard {
       float: none;
